--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 
-ErrorDocument 404   404.html
+ErrorDocument 404   https://verceltest.github.io/CrystalBrowser/404.html
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
